--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,11 @@
+#hide2,#hide22{
+    display:none;
+}
+
+#emailinviata{
+    display:none;
+}
+
 .card-img-top {
     width: 100%;
     height: 25vw;
