home rimanda alla homepage, aggiunto bottone registrazione, rimossa frase piattaforme streaming, risolto messaggio recupera password

--- a/css/home.css
+++ b/css/home.css
@@ -41,7 +41,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:500);
 /*FINE BOTTONE GOOGLE*/
 
-#hide2,#hide22{
+#hide2,#hide20,#hide22{
     display:none;
 }
 
